--- a/src/blog/templates/blog/includes/image-grid.html
+++ b/src/blog/templates/blog/includes/image-grid.html
@@ -3,11 +3,9 @@
 {% block content %}
 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
     {% for picture in page.gallery_images.all %}
-        <div class="open-image-modal bg-white rounded-xl overflow-hidden drop-shadow group hover:rotate-3 transition-transform">
+        <div id="{{forloop.counter0}}" class="open-image-modal bg-white rounded-xl overflow-hidden drop-shadow group hover:rotate-3 transition-transform relative cursor-pointer" >
             {% image picture.image fill-1920x1080-c100 %}
-            {% if picture.caption%}
-                <div class="pl-2 p-1">{{ picture.caption }}</div>
-            {% endif %}
+            <div class="image-caption" id="{{forloop.counter0}}">{{picture.caption}}</div>
             <div class="image-modal-info hidden" id={{forloop.counter0}}>
                 {% image picture.image original class="image-modal-image" %}
                 <div>{{ picture.caption }}</div>
@@ -15,4 +13,44 @@
         </div>
     {% endfor %}
 </div>
+
+<script>
+    const galleryItems = document.querySelectorAll(".open-image-modal");
+    const imageCaptions = document.querySelectorAll(".image-caption");
+
+    // Function to show the image caption, if there is one, on hovering
+    galleryItems.forEach(item => item.addEventListener("mouseover", () => {
+        var itemID = item.id;
+        var index = itemID++;
+        if (imageCaptions[index].textContent) {
+            imageCaptions[index].style.display = "flex";
+        }
+    }));
+
+    // Function to hide the image caption again when mouse leaves
+    galleryItems.forEach(item => item.addEventListener("mouseleave", () => {
+        var itemID = item.id;
+        var index = itemID++;
+        imageCaptions[index].style.display = "none";
+    }));
+</script>
+
+<style>
+    .image-caption {
+        display: none;
+        padding-left: 0.5rem;
+        padding: 0.25rem;
+        position: absolute;
+        top: 0px;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        justify-content: flex-end;
+        background-image: linear-gradient(to top, var(--tw-gradient-stops));
+        --tw-gradient-from: #eab308 var(--tw-gradient-from-position);
+        --tw-gradient-to: rgb(234 179 8 / 0) var(--tw-gradient-to-position);
+        --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+    }
+</style>
+
 {% endblock %}
