blue header text #55

--- a/src/blog/templates/blog/includes/blogpost-grid.html
+++ b/src/blog/templates/blog/includes/blogpost-grid.html
@@ -13,7 +13,7 @@
                     <div class="h-80 bg-gray-300"></div>
                 {% endif %}
                 <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end bg-gradient-to-t to-transparent from-yellow-500">
-                    <h2 class="font-bold text-4xl text-black group-hover:underline hover:underline decoration-wavy mb-2 pb-2.5 overflow-scroll line-clamp-2">{{ post.title }} </h2>
+                    <h2 class="header-text-color font-bold text-4xl group-hover:underline hover:underline decoration-wavy mb-2 pb-2.5 overflow-scroll line-clamp-2">{{ post.title }} </h2>
                     <div class="flex flex-col justify-between gap-2 text-sm">
                         <div class="flex flex-row items-center flex-wrap gap-2">
                             {% post_user_avatar post 'w-8 h-8 rounded-full object-cover' %}
