--- a/src/blog/templates/blog/includes/image-modal.html
+++ b/src/blog/templates/blog/includes/image-modal.html
@@ -1,14 +1,14 @@
 {% load i18n static wagtailcore_tags wagtailimages_tags user_tags %}
 
 {% block content %}
-<div class="image-modal">
-        <span class="close-image-modal">&times;</span>
-        <div class="image-modal-content">
-            <img src="" alt="" class="image-modal-image">
-            <p class="image-modal-caption text-white"></p>
-        </div>
-        <a id="prev" class="prev">&#10094;</a>
-        <a id="next" class="next">&#10095;</a>
+<div class="hidden fixed z-10 left-0 top-0 w-screen h-screen bg-black/80 image-modal">
+    <span class="absolute top-2.5 right-9 text-white text-4xl font-bold transition duration-300 hover:text-[#bbb] hover:cursor-pointer close-image-modal">&times;</span>
+    <div class="flex flex-col items-center justify-center h-full w-full p-24 image-modal-content" style="padding: 6rem">
+        <img src="" alt="" class="image-modal-image" >
+        <p class="image-modal-caption text-white"></p>
+    </div>
+    <a id="prev" class="cursor-pointer absolute top-1/2 w-auto rounded p-12 text-white font-bold text-4xl transition duration-600 ease-in-out hover:bg-black hover:opacity-90 prev">&#10094;</a>
+    <a id="next" class="cursor-pointer absolute top-1/2 right-0 w-auto rounded p-12 text-white font-bold text-4xl transition duration-600 ease-in-out hover:bg-black hover:opacity-90 next">&#10095;</a>
 </div>
 
 <script>
@@ -84,75 +84,5 @@
         currentImageID = imageID++;
     }
 </script>
-
-<style>
-    .image-modal {
-        display: none; 
-        position: fixed; 
-        z-index: 10; 
-        left: 0;
-        top: 0;
-        width: 100%; 
-        height: 100%; 
-        overflow: auto; 
-        background-color: rgb(0,0,0);
-        background-color: rgba(0,0,0,0.9);
-    }
-
-    .image-modal-content {
-        display: flex;
-        flex-direction: column;
-        place-items: center;
-        justify-items: center;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-        width: 100%;
-        padding: 6rem;
-    }
-
-    .close-image-modal {
-        position: absolute;
-        top: 10px;
-        right: 35px;
-        color: #f1f1f1;
-        font-size: 40px;
-        font-weight: bold;
-        transition: 0.3s;
-    }
-
-    .close-image-modal:hover,
-    .close-image-modal:focus {
-        color: #bbb;
-        text-decoration: none;
-        cursor: pointer;
-    }
-
-    .prev,
-    .next {
-        cursor: pointer;
-        position: absolute;
-        top: 0;
-        top: 50%;
-        width: auto;
-        margin-top: -22px;
-        padding: 50px;
-        color: white;
-        font-weight: bold;
-        font-size: 36px;
-        transition: 0.6s ease;
-        border-radius: 0 3px 3px 0;
-    }
-
-    .next {
-        right: 0;
-        border-radius: 3px 0 0 3px;
-    }
-
-    .prev:hover,
-    .next:hover {
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-</style>
 {% endblock %}
 
