do not use static for setmodalcontent #55

--- a/src/blog/templates/blog/includes/image-grid.html
+++ b/src/blog/templates/blog/includes/image-grid.html
@@ -10,7 +10,7 @@
             </div>
             <div class="image-modal-info hidden" id={{forloop.counter0}}>
                 {% image picture.image original class="image-modal-image" %}
-                <div>{{ picture.caption }}</div>
+                <div class="image-modal-caption">{{ picture.caption }}</div>
             </div>
         </div>
     {% endfor %}
