--- a/src/blog/templates/blog/includes/image-modal.html
+++ b/src/blog/templates/blog/includes/image-modal.html
@@ -3,9 +3,9 @@
 {% block content %}
 <div class="hidden fixed z-10 left-0 top-0 w-screen h-screen bg-black/80 image-modal">
     <span class="absolute top-2.5 right-9 text-white text-4xl font-bold transition duration-300 hover:text-[#bbb] hover:cursor-pointer close-image-modal">&times;</span>
-    <div class="flex flex-col items-center justify-center h-full w-full p-24 image-modal-content" style="padding: 6rem">
-        <img src="" alt="" class="image-modal-image" >
-        <p class="image-modal-caption text-white"></p>
+    <div class="flex flex-col items-center justify-center h-full w-full gap-4 p-6 lg:p-24 image-modal-content">
+        <img src="" alt="" class="flex w-full md:h-full object-scale-down image-modal-image" >
+        <p class="image-modal-caption hidden text-white"></p>
     </div>
     <a id="prev" class="cursor-pointer absolute top-1/2 w-auto rounded p-12 text-white font-bold text-4xl transition duration-600 ease-in-out hover:bg-black hover:opacity-90 prev">&#10094;</a>
     <a id="next" class="cursor-pointer absolute top-1/2 right-0 w-auto rounded p-12 text-white font-bold text-4xl transition duration-600 ease-in-out hover:bg-black hover:opacity-90 next">&#10095;</a>
@@ -80,6 +80,10 @@
         modalContent.querySelector(".image-modal-image").src = imgTag.src;
         modalContent.querySelector(".image-modal-image").alt = imgTag.alt;
         modalContent.querySelector(".image-modal-caption").textContent = captionTag.textContent;
+
+        if (captionTag.textContent) {
+            modalContent.querySelector(".image-modal-caption").style.display = "flex";
+        }
     }
 
     // Function to set the currrentImageID based on the modalinfo
