improve mobile styling #55

--- a/src/blog/templates/blog/includes/image-modal.html
+++ b/src/blog/templates/blog/includes/image-modal.html
@@ -7,8 +7,8 @@
         <img src="" alt="" class="flex w-full md:h-full object-scale-down image-modal-image" >
         <p class="image-modal-caption hidden text-white"></p>
     </div>
-    <a id="prev" class="cursor-pointer absolute top-1/2 w-auto rounded p-12 text-white font-bold text-4xl transition duration-600 ease-in-out hover:bg-black hover:opacity-90 prev">&#10094;</a>
-    <a id="next" class="cursor-pointer absolute top-1/2 right-0 w-auto rounded p-12 text-white font-bold text-4xl transition duration-600 ease-in-out hover:bg-black hover:opacity-90 next">&#10095;</a>
+    <a id="prev" class="cursor-pointer absolute top-1/2 w-auto rounded p-4 md:p-12 text-white font-bold text-4xl transition duration-600 ease-in-out hover:bg-black hover:opacity-90 prev">&#10094;</a>
+    <a id="next" class="cursor-pointer absolute top-1/2 right-0 w-auto rounded p-4 md:p-12 text-white font-bold text-4xl transition duration-600 ease-in-out hover:bg-black hover:opacity-90 next">&#10095;</a>
 </div>
 
 <script>
