--- a/src/brazil_blog/static/css/brazil_blog_compiled.css
+++ b/src/brazil_blog/static/css/brazil_blog_compiled.css
@@ -1651,27 +1651,6 @@ select {
   height: 100vh;
 }
 
-.max-h-full {
-  max-height: 100%;
-}
-
-.max-h-screen {
-  max-height: 100vh;
-}
-
-.max-h-10 {
-  max-height: 2.5rem;
-}
-
-.max-h-96 {
-  max-height: 24rem;
-}
-
-.max-h-fit {
-  max-height: -moz-fit-content;
-  max-height: fit-content;
-}
-
 .min-h-16 {
   min-height: 4rem;
 }
@@ -1720,20 +1699,12 @@ select {
   max-width: 48rem;
 }
 
-.max-w-full {
-  max-width: 100%;
-}
-
 .max-w-none {
   max-width: none;
 }
 
 .max-w-xs {
   max-width: 20rem;
-}
-
-.flex-initial {
-  flex: 0 1 auto;
 }
 
 .flex-shrink {
@@ -1976,11 +1947,6 @@ select {
   background-size: cover;
 }
 
-.object-contain {
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1998,10 +1964,6 @@ select {
 
 .p-1 {
   padding: 0.25rem;
-}
-
-.p-12 {
-  padding: 3rem;
 }
 
 .p-2 {
@@ -2483,10 +2445,6 @@ select {
     width: auto;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:max-w-5xl {
     max-width: 64rem;
   }
@@ -2507,9 +2465,8 @@ select {
     gap: 0.5rem;
   }
 
-  .md\:object-scale-down {
-    -o-object-fit: scale-down;
-       object-fit: scale-down;
+  .md\:p-12 {
+    padding: 3rem;
   }
 
   .md\:text-3xl {
