fix: Fix check if commentBody exists before assigning a cuica type sound on key press event to it

--- a/src/blog/templates/blog/includes/cuica-course-form.html
+++ b/src/blog/templates/blog/includes/cuica-course-form.html
@@ -39,7 +39,11 @@
             cuicaSounds[randomIndex].play();
         }
 
-        document.getElementById('commentBody').addEventListener('keydown', playRandomCuicaSound);
+        const commentBody = document.getElementById('commentBody');
+
+        if (commentBody) {
+            commentBody.addEventListener('keydown', playRandomCuicaSound);
+        }
     });
 
 </script>
