feat: Show amount of comments per blog post on blog overview page

--- a/src/blog/templates/blog/includes/blogpost-grid.html
+++ b/src/blog/templates/blog/includes/blogpost-grid.html
@@ -21,6 +21,8 @@
                             <div class="flex items-center space-x-1 ml-auto bg-white rounded-full px-1">
                                 <span class="text-xl">😻</span>
                                 <span class="font-bold pr-1 mt-0.5">{{ post.specific.like_count }}</span>
+                                <span class="text-xl">💬</span>
+                                <span class="font-bold pr-1">{{ post.specific.comments.count }}</span>
                             </div>
                         </div>
                         <div>
