--- a/src/blog/templates/blog/author_page.html
+++ b/src/blog/templates/blog/author_page.html
@@ -16,7 +16,7 @@
         </div>
 
         <h2 class="text-2xl font-semibold text-black">Posts by {{ page.title }}</h2>
-        {% include "blog/includes/blogpost-grid.html" with blogposts=page.user.blog_posts.all only %}
+        {% include "blog/includes/blogpost-grid.html" with blogposts=posts %}
     </div>
 </div>
 {% endblock %}
