Added: Add "like" feature to blog posts and comments (#70)
* feat: Add "like post" feature to blog posts

* style: Refactor like button styling and functionality

* style: Decrease margin-top of counter a bit

* feat: Adjust likes information to blog overview grid

* feat: Add likes functionality to comments

* chore: Re-run tailwindcss

--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -19,6 +19,18 @@
                         <div class="flex-col w-4/5">
                             <h1 class="header-text-color flex-wrap font-bold text-xl md:text-4xl mb-0 overflow-scroll line-clamp-3">{{ page.title }}</h1>
                             <div class="text-sm italic">{{ page.specific.date | date:"d-m-Y H:i" }}</div>
+                            <div id="like-section" class="flex items-center space-x-2 pr-2 mt-2">
+                                <button id="like-button" data-post-id="{{ page.id }}" class="flex items-center space-x-2 px-2 py-1 rounded-full transition duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500
+                                    {% if user in page.likes.all %}
+                                        bg-red-500 text-white hover:bg-red-600
+                                    {% else %}
+                                        bg-white text-gray-700 hover:bg-gray-300
+                                    {% endif %}
+                                ">
+                                    <div class="text-xl rounded-full -ml-1 bg-white">😻</div>
+                                    <div id="like-count" class="font-bold block mt-0.5">{{ page.like_count }}</div>
+                                </button>
+                            </div>
                         </div>
                         {% if page.author.author_page %}
                             <a href="{{ page.author.author_page.url }}" class="flex flex-row items-center gap-2 hover:underline">
@@ -88,6 +100,49 @@
         {% include "blog/includes/image-modal.html" %}
     </div>
 </div>
+
+<script>
+    const likeButton = document.getElementById('like-button');
+    const likeCount = document.getElementById('like-count');
+    const likeText = document.getElementById('like-text');
+
+    likeButton.addEventListener('click', function() {
+        const postId = this.dataset.postId;
+        fetch(`/blog/api/likes/${postId}/toggle_like/`, {
+            method: 'POST',
+            headers: {
+                'X-CSRFToken': getCookie('csrftoken'),
+                'Content-Type': 'application/json'
+            },
+        })
+        .then(response => response.json())
+        .then(data => {
+            likeCount.textContent = data.like_count;
+            if (data.liked) {
+                    likeButton.classList.remove('bg-white', 'text-gray-700', 'hover:bg-gray-300');
+                    likeButton.classList.add('bg-red-500', 'text-white', 'hover:bg-red-600');
+                } else {
+                    likeButton.classList.remove('bg-red-500', 'text-white', 'hover:bg-red-600');
+                    likeButton.classList.add('bg-white', 'text-gray-700', 'hover:bg-gray-300');
+                }
+        });
+    });
+
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+</script>
 
 {% include "blog/includes/tukanchamon.html" %}
 {% include "blog/includes/cuica-course-form.html" %}
